Update Shiftora website with light/dark theme toggle and rebranding

--- a/index.html
+++ b/index.html
@@ -7,39 +7,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <title>ScaletrailAI - AI Automation Agency | Automate. Scale. Thrive.</title>
-  <meta name="title" content="ScaletrailAI - AI Automation Agency | Automate. Scale. Thrive." />
+  <title>Shiftora AI - AI Automation Agency | Automate. Scale. Thrive.</title>
+  <meta name="title" content="Shiftora AI - AI Automation Agency | Automate. Scale. Thrive." />
   <meta name="description"
-    content="ScaletrailAI helps businesses automate workflows with intelligent AI solutions. Reduce manual labor by 70%, cut costs, and scale effortlessly. Get your free automation audit today." />
+    content="Shiftora AI helps businesses automate workflows with intelligent AI solutions. Reduce manual labor by 70%, cut costs, and scale effortlessly. Get your free automation audit today." />
   <meta name="keywords"
-    content="AI automation agency, business automation, artificial intelligence, workflow automation, process automation, RPA, AI consulting, automation solutions, reduce manual labor, save time, ScaletrailAI" />
-  <meta name="author" content="ScaletrailAI" />
+    content="AI automation agency, business automation, artificial intelligence, workflow automation, process automation, RPA, AI consulting, automation solutions, reduce manual labor, save time, Shiftora AI" />
+  <meta name="author" content="Shiftora AI" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://scaletrailai.com/" />
+  <link rel="canonical" href="https://shiftora.ai/" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://scaletrailai.com/" />
-  <meta property="og:title" content="ScaletrailAI - AI Automation Agency | Automate. Scale. Thrive." />
+  <meta property="og:url" content="https://shiftora.ai/" />
+  <meta property="og:title" content="Shiftora AI - AI Automation Agency | Automate. Scale. Thrive." />
   <meta property="og:description"
     content="Stop wasting time on repetitive tasks. We help businesses automate workflows with AI, reducing manual labor by 70% and cutting operational costs." />
-  <meta property="og:image" content="https://scaletrailai.com/og-image.png" />
+  <meta property="og:image" content="https://shiftora.ai/og-image.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:site_name" content="ScaletrailAI" />
+  <meta property="og:site_name" content="Shiftora AI" />
   <meta property="og:locale" content="en_US" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://scaletrailai.com/" />
-  <meta name="twitter:title" content="ScaletrailAI - AI Automation Agency | Automate. Scale. Thrive." />
+  <meta name="twitter:url" content="https://shiftora.ai/" />
+  <meta name="twitter:title" content="Shiftora AI - AI Automation Agency | Automate. Scale. Thrive." />
   <meta name="twitter:description"
     content="Stop wasting time on repetitive tasks. We help businesses automate workflows with AI, reducing manual labor by 70% and cutting operational costs." />
-  <meta name="twitter:image" content="https://scaletrailai.com/og-image.png" />
+  <meta name="twitter:image" content="https://shiftora.ai/og-image.png" />
 
   <!-- Additional SEO -->
-  <meta name="theme-color" content="#8b5cf6" />
-  <meta name="msapplication-TileColor" content="#8b5cf6" />
+  <meta name="theme-color" content="#5B9BD5" />
+  <meta name="msapplication-TileColor" content="#5B9BD5" />
   <link rel="apple-touch-icon" href="/favicon.svg" />
 
   <!-- Fonts - Preload for performance -->
@@ -57,11 +57,11 @@
   <style>
     /* Critical above-the-fold styles */
     :root {
-      --primary: #8b5cf6;
-      --bg-primary: #050507;
-      --bg-secondary: #0a0a0f;
+      --primary: #5B9BD5;
+      --bg-primary: #050609;
+      --bg-secondary: #0a0c12;
       --text-primary: #ffffff;
-      --text-secondary: #d4d4d8;
+      --text-secondary: #d4d8e0;
     }
 
     * {
@@ -166,18 +166,18 @@
     {
       "@context": "https://schema.org",
       "@type": "ProfessionalService",
-      "name": "ScaletrailAI",
+      "name": "Shiftora AI",
       "description": "AI Automation Agency helping businesses improve efficiency, reduce manual labor, and save time & money through intelligent automation solutions.",
-      "url": "https://scaletrailai.com",
-      "logo": "https://scaletrailai.com/favicon.svg",
-      "image": "https://scaletrailai.com/og-image.png",
-      "email": "hello@scaletrail.ai",
+      "url": "https://shiftora.ai",
+      "logo": "https://shiftora.ai/favicon.svg",
+      "image": "https://shiftora.ai/og-image.png",
+      "email": "hello@shiftora.ai",
       "priceRange": "$$$",
       "areaServed": "Worldwide",
       "serviceType": ["AI Automation", "Business Process Automation", "Workflow Automation", "AI Consulting"],
       "sameAs": [
-        "https://twitter.com/scaletrailai",
-        "https://linkedin.com/company/scaletrailai"
+        "https://twitter.com/shiftoraai",
+        "https://linkedin.com/company/shiftoraai"
       ],
       "aggregateRating": {
         "@type": "AggregateRating",
