--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/png" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
@@ -40,7 +40,7 @@
   <!-- Additional SEO -->
   <meta name="theme-color" content="#5B9BD5" />
   <meta name="msapplication-TileColor" content="#5B9BD5" />
-  <link rel="apple-touch-icon" href="/favicon.svg" />
+  <link rel="apple-touch-icon" href="/logo.png" />
 
   <!-- Fonts - Preload for performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
