Remove dark mode and enforce light theme

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
   <style>
     /* Critical above-the-fold styles */
     :root {
-      --primary: #5B9BD5;
-      --bg-primary: #050609;
-      --bg-secondary: #0a0c12;
-      --text-primary: #ffffff;
-      --text-secondary: #d4d8e0;
+      --primary: #4A8BC4;
+      --bg-primary: #ffffff;
+      --bg-secondary: #f8fafc;
+      --text-primary: #0f172a;
+      --text-secondary: #475569;
     }
 
     * {
