Update contact email to Shiftora25@gmail.com

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       "url": "https://shiftora.ai",
       "logo": "https://shiftora.ai/favicon.svg",
       "image": "https://shiftora.ai/og-image.png",
-      "email": "hello@shiftora.ai",
+      "email": "Shiftora25@gmail.com",
       "priceRange": "$$$",
       "areaServed": "Worldwide",
       "serviceType": ["AI Automation", "Business Process Automation", "Workflow Automation", "AI Consulting"],
